<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Imagen del personaje -->
        <ImageView
            android:id="@+id/image_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
             />

        <!-- Título del personaje -->
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo_del_personaje"
            android:layout_marginBottom="8dp"
            style="@style/TextStyleTh"/>

        <!-- Descripción -->
        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_del_personaje"

            style="@style/TextStylePrimary"
            android:layout_marginBottom="16dp" />

        <!-- Sección de habilidades -->
        <TextView
            android:id="@+id/text_habilidad_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habilidad"
            android:textSize="18sp"
            style="@style/TextStyleTh"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/text_habilidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalle_de_la_habilidad"

            style="@style/TextStylePrimary"
            android:layout_marginBottom="16dp" />

        <!-- Sección de vida -->
        <TextView
            android:id="@+id/text_vida_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vida"
            style="@style/TextStyleTh"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/text_vida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_de_vida"

            style="@style/TextStylePrimary"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>
